# rs-utils

./: .gitignore  Cargo.toml  LICENSE  README.md  docs.sh  graph-dependencies.sh  graph-modules.sh  run-example.sh  run.sh  shell.nix  test.sh
.githooks/: pre-push
examples/: example.rs  rs_utils-example.rs
src/: app.rs  array.rs  enum_unitary.rs  file.rs  lib.rs  log.rs  macros.rs  numeric.rs  process.rs
src/log/: mod.rs
src/log/kv/: format.rs  mod.rs
src/macros/: enum_unitary.rs  mod.rs
