[package]
name = "nsys-rs-utils"
version = "0.2.2"
authors = ["Shane Pearman <spearman@gitlab.com>"]
description = "Miscellaneous Rust utilities"
repository = "https://github.com/spearman/rs-utils"
license = "Apache-2.0"
readme = "README.md"
edition = "2024"

[lib]
name = "rs_utils"

[features]
default = []
env-logger-format = ["env_logger", "serde_json", "log/kv_serde"]

[dependencies]
log = { version = "0.4.*", features = ["kv"] }
stdext = "0.3.*"
env_logger = { version = "0.11.*", features = ["unstable-kv"], optional = true }
serde_json = { version = "1.*", optional = true }

[dev-dependencies]
quickcheck = "1.*"
quickcheck_macros = "1.*"
tempfile = "3.*"

[[example]]
name = "example"
required-features = ["env-logger-format"]
