[package]
name = "nsys-rs-utils"
version = "0.2.3"
authors = ["Shane Pearman <spearman@gitlab.com>"]
description = "Miscellaneous Rust utilities"
repository = "https://github.com/spearman/rs-utils"
license = "Apache-2.0"
readme = "README.md"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "rs_utils"

[features]
default = []
env-logger-format = ["env_logger", "serde_json", "log/kv_serde"]

[dependencies]
log = { version = "0.4.*", features = ["kv"] }
stdext = "0.3.*"
env_logger = { version = "0.11.*", features = ["kv"], optional = true }
serde_json = { version = "1.*", optional = true }

[dev-dependencies]
quickcheck = "1.*"
quickcheck_macros = "1.*"
tempfile = "3.*"

[[example]]
name = "example"
required-features = ["env-logger-format"]

[lints.clippy]
empty_line_after_doc_comments = "allow"
single-component-path-imports = "allow"
